# dqtensor

./: .gitignore  Cargo.toml  README.md  build.rs  buildah.sh  exemplopy.py
cuda/: apply_gate.cu  discretize_zoh.cu  expm_mul.cu  generate_dynamic_params.cu  simulate_scan.cu  ssm_kernel_conv.cu
docs/: index.html  neuron.css  neuron.html  script.js  style.css  styles.css
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/src/algebra_linear/: matrizes.rs  mod.rs
python/src/f_not_linear/: activation.rs  old_deprecated_derivatives.rs
python/src/loss_functions/: loss.rs
python/src/lstm/: lstm_layer.rs  lstm_stack.rs
python/src/net_propagation/: loss.rs  mod.rs
python/src/neuron/: mod.rs  neuron_v2.rs  utils_neuron_v2.rs
python/src/optimizers/: bp_optimizers.rs
python/src/ssm/: discretizer.rs  dynamic.rs  parametric.rs
python/src/tensor/: export_tensor.rs  mod.rs
python/src/visualization/: neural_net_plot.rs
src/: build.sh  lib.rs  lstm_test.rs  main.rs  mamba_test.rs  mlp_test.rs  mlp_test2.rs
src/algebra_linear/: operacoes.rs  utils.rs
src/back_propagation/: back_propagation.rs
src/convolution/: filters.rs  pooling.rs
src/data/: ingestion.rs
src/dsa_drafts/: dsa.rs
src/f_not_linear/: activation.rs  derivatives.rs  mod.rs  old_deprecated_derivatives.rs  softmax_utils.rs
src/loss_functions/: loss_derivative.rs  loss_functions.rs  mod.rs  softmax_utils.rs
src/lstm/: lstm_cell.rs  lstm_layer.rs  mod.rs  state.rs
src/mlp/: dense.rs
src/net_propagation/: bptt.rs  deprecated_back_propagation.rs  (+4 more)
src/ssm/: gate.rs  (+6 more)
(+18 files in other folders)
